# python-sdk

./: .gitignore  Makefile  README.md  pyproject.toml
.changeset/: .last_bumped_modules  change-20260126-10:38:46.yml
.github/actions/setup-python/: action.yml
.github/workflows/: python-build.yml  validate-and-publish.yml  version-and-publish.yml
changesets/: README.md  manage.py
codegen/: README.md  constants.py  utils.py
codegen/http/: generate_http.py
codegen/types/: generate_types.py  pydantic_helpers.py
schema/: public_api.swagger.json
src/: stamper.py
src/stamper/: stamper.py
turnkey/util/tink/: bytes.py
